<resources>
    <string name="app_name">Alma</string>
    <string name="correo">Correo</string>
    <string name="confirmar_correo">Confirmar correo</string>
    <string name="confirmar">Confirmar</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciarSesion">iniciar sesion</string>
    <string name="olvidasteContrasenia">¿Olvidaste tu contraseña?</string>
    <string name="registrarse">registrarse</string>
    <string name="ciudad">Ciudad</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TIENDA">TIENDA</string>
    <string name="FAVORITOS">FAVORITOS</string>
    <string name="CARRITO">CARRITO</string>
    <string name="UBICACION">UBICACION</string>
    <string name="PERFIL">PERFIL</string>
    <string name="ATENCIONCLIENTE">ATENCION AL CLIENTE</string>
</resources>