<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.RecoverActivity"
    android:background="@drawable/gradient_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1">

            <ImageView
                android:id="@+id/registerViewLogo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/logonegroalma">
            </ImageView>

            <TextView
                android:id="@+id/txtRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/opensanslight"
                android:text="Restablecer contraseña"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black">

            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/registerFondo"
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/gris_dark"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/roundstyle_txt"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/opensanslight"
                    android:hint="@string/correo"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress">
                </EditText>

                <EditText
                    android:id="@+id/registerConfirmEmail"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/roundstyle_txt"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/opensanslight"
                    android:hint="@string/confirmar_correo"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress">
                </EditText>

                <Button
                    android:id="@+id/recoverButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="155dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="@color/purple_dark"
                    android:fontFamily="@font/opensanslight"
                    android:text="@string/confirmar"
                    android:textSize="22sp"
                    android:textStyle="bold">
                </Button>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>