<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.RegisterActivity"
    android:background="@color/purple_buscador">

    <ImageView
        android:id="@+id/registerViewLogo"
        android:layout_width="330dp"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtRegister"
        android:src="@drawable/logonegroalma">
    </ImageView>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/registerViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerFondo"
        android:gravity="center"
        android:fontFamily="@font/opensanslight"
        android:text="Registro"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black">

    </TextView>

    <ImageView
        android:id="@+id/registerFondo"
        android:layout_width="335dp"
        android:layout_height="470dp"
        android:background="@color/gris_borde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegister">
    </ImageView>

    <EditText
        android:id="@+id/registerName"
        android:layout_width="240dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="@id/registerFondo"
        app:layout_constraintStart_toStartOf="@id/registerFondo"
        app:layout_constraintEnd_toEndOf="@id/registerFondo"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:fontFamily="@font/opensanslight"
        android:hint="Nombre y apellidos"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="textPersonName">
    </EditText>

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="240dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/registerName"
        app:layout_constraintStart_toStartOf="@id/registerFondo"
        app:layout_constraintEnd_toEndOf="@id/registerFondo"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:fontFamily="@font/opensanslight"
        android:hint="@string/correo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        android:id="@+id/registerCity"
        android:layout_width="240dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/registerEmail"
        app:layout_constraintStart_toStartOf="@id/registerFondo"
        app:layout_constraintEnd_toEndOf="@id/registerFondo"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:fontFamily="@font/opensanslight"
        android:hint="@string/ciudad"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/registerAddress"
        android:layout_width="240dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/registerCity"
        app:layout_constraintStart_toStartOf="@id/registerFondo"
        app:layout_constraintEnd_toEndOf="@id/registerFondo"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:fontFamily="@font/opensanslight"
        android:hint="Dirección"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/registerPhone"
        android:layout_width="240dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/registerAddress"
        app:layout_constraintStart_toStartOf="@id/registerFondo"
        app:layout_constraintEnd_toEndOf="@id/registerFondo"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:fontFamily="@font/opensanslight"
        android:hint="Teléfono"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="phone">
    </EditText>

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="240dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/registerPhone"
        app:layout_constraintStart_toStartOf="@id/registerFondo"
        app:layout_constraintEnd_toEndOf="@id/registerFondo"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:fontFamily="@font/opensanslight"
        android:hint="@string/contrasenia"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="270dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/registerPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/purple_dark"
        android:fontFamily="@font/opensanslight"
        android:text="Confirmar"
        android:textSize="22sp"
        android:textStyle="bold">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>